tests-build/tests/fail/executor_without_current_thread.rs
use build_tests::tokio_executor::current_thread;

fn main() {}
